# player

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  idf_component.yml  sdkconfig.defaults
.github/workflows/: ci.yml
components/adapters/: CMakeLists.txt
components/adapters/include/: EspAdfPlayer.hpp  EspI2cBus.hpp  EspI2sBus.hpp  EspI2sPlayer.hpp  IDisplay.hpp  II2cBus.hpp  II2sBus.hpp  IPlayer.hpp  OledSsd1306Display.hpp  Ssd1306Controller.hpp  UiTypes.hpp
components/adapters/mock/: MockDisplay.hpp  MockI2cBus.hpp  MockI2sBus.hpp  MockPlayer.hpp
components/adapters/src/: EspAdfPlayer.cpp  EspI2cBus.cpp  EspI2sBus.cpp  EspI2sPlayer.cpp  OledSsd1306Display.cpp  Ssd1306Controller.cpp
components/board_config/include/: BoardConfig.hpp
components/commands/: CMakeLists.txt
components/common/: CMakeLists.txt
components/common/include/: AudioTypes.hpp  BoardConfig.hpp  RingBuffer.hpp  UiTypes.hpp
components/core/: CMakeLists.txt
components/core/include/: AppContext.hpp  AppController.hpp  IUiSink.hpp  UiTask.hpp  types.hpp
components/core/mock/: MockUiTask.hpp
components/core/src/: AppContext.cpp  AppController.cpp  UiTask.cpp
components/libmad/: mp3dec.h
components/libmad/include/: mad.h
components/services/: CMakeLists.txt
components/services/include/: IStationRepository.hpp  PlayerService.hpp  StationRepository.hpp  UiService.hpp
components/services/mock/: MockStationRepository.hpp  MockUiService.hpp
components/services/src/: PlayerService.cpp  StationRepository.cpp  UiService.cpp
docs/: requirements.md
docs/diagrams/: class_adapters.puml  class_commands.puml  class_core.puml  class_services.puml  component.puml  hw_block.puml  wiring_gpio_map.puml
docs/diagrams/class/: class_overview.puml
docs/diagrams/sequence/: seq_station_display.puml
main/: CMakeLists.txt  app_main.cpp
tests/unit/: CMakeLists.txt
tests/unit/adapters/: CMakeLists.txt  OledDisplayTest.cpp  OledDisplayTest.hpp
tests/unit/core/: AppControllerTest.cpp  AppControllerTest.hpp  CMakeLists.txt
tests/unit/services/: CMakeLists.txt  StationRepositoryTest.cpp  StationRepositoryTest.hpp  UiServiceTest.cpp  UiServiceTest.hpp
tests/unit/stubs/: esp_err.h  esp_log.h
tools/: build.sh
